yiltc-go-backup/testsuite/negative/enum_wrong_payload_type.yilt
// Negative test: wrong payload type for enum variant

enum Result
    Ok(int)
    Err(str)

pub fn main()
    let r = Result.Ok("not an int")
    print(r)
